--- a/U6/index.html
+++ b/U6/index.html
@@ -70,27 +70,17 @@
 
 
       <div id=textwidth>
-        <p>Welcome to ICT Solutions, your trusted partner for all things web development. We are a team of passionate
-          and
-          skilled developers dedicated to creating cutting-edge web solutions that help businesses grow and succeed.
-          With
-          years of experience in the industry, we have honed our craft to deliver high-quality, scalable, and
-          user-friendly websites that meet the unique needs of our clients. At ICT Solutions, we understand that a
-          website
-          is more than just a digital presence. It's an opportunity to connect with customers, showcase products or
-          services, and build brand awareness. That's why we take a collaborative approach to web development, working
-          closely with our clients to understand their vision and goals, and deliver solutions that exceed their
-          expectations. Our expertise covers a wide range of web development services.</p>
+        <p>Web Development Services Offered by ICT Solutions
+        <p>Custom Web Design and Development
+
+        <p>We specialize in crafting bespoke, visually appealing, and intuitive websites tailored to your brand identity
+          and business objectives.
+        <p>Our team ensures that the design is not only aesthetically pleasing but also functional, providing an
+          excellent user experience across various devices and platforms.
+          E-commerce Solutions
       </div>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-
-
       <div class="container">
-        <FORM Action="mailto:22118556@cambria.ac.uk?Subject=Hi" METHOD="POST">
+        <FORM padding=20px Action="mailto:22118556@cambria.ac.uk?Subject=Hi" METHOD="POST">
           <p>Application Form</p>
           <input type="text" id="fname" name="firstname" placeholder="Your name..">
           <input type="text" id="lname" name="lastname" placeholder="Your last name..">
@@ -99,23 +89,63 @@
           <br>
           <label for="fileUpload">Upload CV:</label>
           <input type="file" id="fileUpload" name="fileUpload">
-          <input type="submit" value="Submit">
+          <input type="submit" valdue="Submit">
 
         </form>
 
 
       </div>
+      <div id=textwidth>
+        <p>ICT Solutions offers end-to-end e-commerce development services, including online store setup, secure payment
+          gateway integration, and customized shopping experiences for your customers.
+        <p>Our e-commerce solutions are designed to maximize sales, streamline operations, and enhance customer
+          satisfaction.
+          Content Management Systems (CMS)
 
-      </form>
+        <p>We have expertise in developing and implementing robust content management systems such as WordPress, Drupal,
+          and Joomla, empowering you to manage website content efficiently and effectively.
+        <p>Web Application Development
+
+        <p>Our team is adept at creating dynamic and scalable web applications tailored to your specific business
+          requirements, using technologies such as React, Angular, and Vue.js.
+        <p>Responsive Web Design
+
+        <p>We prioritize responsive design, ensuring that your website provides an optimal viewing experience across a
+          wide range of devices, from desktops to smartphones and tablets.
+          Search Engine Optimization (SEO)
+
+        <p>Our web development services include SEO best practices implementation to enhance the visibility and ranking
+          of your website on search engines, driving organic traffic.
+        <p>Maintenance and Support
+
+        <p>ICT Solutions provides ongoing maintenance and support services, ensuring that your website remains secure,
+          up-to-date, and optimized for performance.
+        <p>Integration and Customization
+
+        <p>We offer seamless integration with third-party services and APIs, as well as customization of existing web
+          platforms to meet your unique business needs.
+        <p>At ICT Solutions, we are committed to leveraging the latest technologies and industry best practices to
+          deliver innovative, reliable, and scalable web solutions that empower your business to thrive in the digital
+          landscape.</p>
+      </div>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+
+
+
+
+
+
+
+
+
+      <!-- This closes the 'maincontent' div tag -->
+
     </div>
-
-    
-
-
-    <!-- This closes the 'maincontent' div tag -->
-
-  </div>
-  <!-- This closes the 'page' div tag -->
+    <!-- This closes the 'page' div tag -->
   </div>
 
 </body>
