--- a/U6/profile.html
+++ b/U6/profile.html
@@ -17,7 +17,7 @@
     <!-- The navigation div will handle the background colour of the main content, this will be consistent across all pages -->
     <div id="navigation">
 
-      ﻿<div class="button-container">
+      <div class="button-container">
         <img class=Trainee src="images/logo.png" alt="Think Future Banner Image">
         <form action="index.html">
           <button class=button>Homepage</button>
@@ -39,8 +39,15 @@
     </div>
     <!-- The page div will handle the background colour of the main content, this will be consistent across all pages -->
     <div id="maincontent">
+      <div class="video">
+        <video width="480" height="320" align="right" src="images/Profile.mp4" controls autoplay loop>
 
+
+          Your browser does not support the video tag.>
+        </video>
+      </div>
       <h1>ICT Solutions</h1>
+
       <p>Empowering Your Online Presence</p>
       <script>
         //Time of day message script- by javascriptkit.com
@@ -61,44 +68,64 @@
           document.write('<b>Good evening, welcome to our website.</b>')
 
       </script>
+
       <div id=textwidth2>
-      <div class="right">
-        <p><H2>ICT Solutions: Empowering Your Digital Future</H2>
+        <div class="right">
+
+          <p>
+          <H2>ICT Solutions: Empowering Your Digital Future</H2>
           <H3>Introduction</H3>
-        At ICT Solutions, we are passionate about harnessing the power of technology to transform businesses and organizations. With a proven track record of delivering innovative web development solutions, we are dedicated to creating powerful, user-centric websites that drive growth and success.
+          At ICT Solutions, we are passionate about harnessing the power of technology to transform businesses and
+          organizations. With a proven track record of delivering innovative web development solutions, we are dedicated
+          to creating powerful, user-centric websites that drive growth and success.
 
-        <p><H3>Our Mission</H3>
-        Our mission is to empower businesses with cutting-edge web development solutions that elevate their online presence, streamline operations, and enhance customer engagement. We strive to exceed expectations and deliver exceptional results that propel our clients towards their digital goals.
 
-          <p><H3>Our Services</H3>
-            <p><H4>1. Custom Web Development</H4>
-        We specialize in crafting bespoke, high-performance websites tailored to meet the unique needs of each client. Our team of experienced developers leverages advanced technologies to ensure seamless functionality and stunning design.
 
-              <p><H4>2. E-Commerce Solutions</H4>
-        We excel in developing secure and scalable e-commerce platforms, enabling businesses to capitalize on the vast opportunities of online retail. From intuitive user interfaces to robust payment integration, we deliver comprehensive e-commerce solutions for businesses of all sizes.
+          <p>
+          <H3>Our Mission</H3>
+          Our mission is to empower businesses with cutting-edge web development solutions that elevate their online
+          presence, streamline operations, and enhance customer engagement. We strive to exceed expectations and deliver
+          exceptional results that propel our clients towards their digital goals.
 
-                <p><H4>3. Web Application Development</H4>
-        Harnessing the latest frameworks and best practices, we create dynamic and responsive web applications that optimize processes, improve efficiency, and drive productivity for our clients.
+          <p>
+          <H3>Our Services</H3>
+          <p>
+          <H4>1. Custom Web Development</H4>
+          We specialize in crafting bespoke, high-performance websites tailored to meet the unique needs of each client.
+          Our team of experienced developers leverages advanced technologies to ensure seamless functionality and
+          stunning design.
 
-                  <p><H4>4. CMS Implementation</H4>
-        We specialize in implementing robust Content Management Systems (CMS) that empower clients to effortlessly manage and update their website content, ensuring flexibility and adaptability in a rapidly evolving digital landscape.
+          <p>
+          <H4>2. E-Commerce Solutions</H4>
+          We excel in developing secure and scalable e-commerce platforms, enabling businesses to capitalize on the vast
+          opportunities of online retail. From intuitive user interfaces to robust payment integration, we deliver
+          comprehensive e-commerce solutions for businesses of all sizes.
 
-                    <p>Why Choose ICT Solutions?
-                      <p>Expertise: Our team comprises talented professionals with extensive experience in web development, ensuring that we deliver top-notch solutions.
-                        <p>Innovation: We stay at the forefront of technological advancements, integrating cutting-edge features and functionalities into our projects.
-                          <p>Client-Centric Approach: We prioritize understanding our clients' needs and aspirations, tailoring our solutions to match their unique vision and goals.
-                            <p>Reliability: Clients can trust us to deliver top-quality work, on time and within budget, every time.
-                              <p>At ICT Solutions, we are committed to fostering long-term partnerships with our clients, guiding them on their digital journey, and providing unwavering support at every step. Let's collaborate to bring your digital ambitions to life! Contact us today to embark on a transformational web development experience.</p>
-        <p>Please use the following links to explore the website</p>
+          <p>
+          <H4>3. Web Application Development</H4>
+          Harnessing the latest frameworks and best practices, we create dynamic and responsive web applications that
+          optimize processes, improve efficiency, and drive productivity for our clients.
+
+          <p>
+          <H4>4. CMS Implementation</H4>
+          We specialize in implementing robust Content Management Systems (CMS) that empower clients to effortlessly
+          manage and update their website content, ensuring flexibility and adaptability in a rapidly evolving digital
+          landscape.
+
+          <p>Why Choose ICT Solutions?
+          <p>Expertise: Our team comprises talented professionals with extensive experience in web development, ensuring
+            that we deliver top-notch solutions.
+          <p>Innovation: We stay at the forefront of technological advancements, integrating cutting-edge features and
+            functionalities into our projects.
+          <p>Client-Centric Approach: We prioritize understanding our clients' needs and aspirations, tailoring our
+            solutions to match their unique vision and goals.
+          <p>Reliability: Clients can trust us to deliver top-quality work, on time and within budget, every time.
+          <p>At ICT Solutions, we are committed to fostering long-term partnerships with our clients, guiding them on
+            their digital journey, and providing unwavering support at every step. Let's collaborate to bring your
+            digital ambitions to life! Contact us today to embark on a transformational web development experience.</p>
+        </div>
       </div>
-      </div>
-      <div class="video">
-        <video width="480" height="320" align="right" src="images/Profile.mp4" controls autoplay loop>
 
-
-          Your browser does not support the video tag.>
-        </video>
-      </div>
 
     </div>
 
