--- a/U6/web.html
+++ b/U6/web.html
@@ -64,12 +64,10 @@
       </script>
 
 
-      <p
-
-      <a href="https://www.codecademy.com/catalog/subject/web-development">
+      <p <a href="https://www.codecademy.com/catalog/subject/web-development">
         <img height=150px width=150px class=left src="images/web1.png">
-      </a>
-      <br>
+        </a>
+        <br>
       <p>Web Development is the practice of developing websites and web apps that live on the internet. Whether you’re
         interested in front-end, back-end, or going full-stack, our web development courses will help you get there. The
         Web Development course on Codecademy is designed to teach beginners the fundamentals of web development,
