--- a/U6/index.html
+++ b/U6/index.html
@@ -3,8 +3,11 @@
 <html>
 
 <head>
-
-  <title>ICT Solutions</title>
+  <meta name="description" content="ICT solutions">
+  <meta name="keywords" content="HTML, CSS, JavaScript">
+  <meta name="author" content="Adam">
+  
+  <title>Homepage</title>
   <a href="index.html">
     <link href="TFstyleSheet.css" rel="stylesheet" type="text/css">
   </a>
@@ -20,7 +23,7 @@
     <div id="navigation">
 
       ﻿<div class="button-container">
-        <img class=Trainee src="images/logo.png" alt="Think Future Banner Image">
+        <img class=Trainee src="images/logo.png" alt="ICT soulutions logo">
         <form action="index.html">
           <button class=button>Homepage</button>
         </form>
