--- a/U6/profile.html
+++ b/U6/profile.html
@@ -3,8 +3,10 @@
 <html>
 
 <head>
-
-  <title>ICT Solutions</title>
+  <meta name="description" content="ICT solutions">
+  <meta name="keywords" content="HTML, CSS, JavaScript">
+  <meta name="author" content="Adam"> 
+  <title>Profile Page</title>
   <link href="TFstyleSheet.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -18,7 +20,7 @@
     <div id="navigation">
 
       <div class="button-container">
-        <img class=Trainee src="images/logo.png" alt="Think Future Banner Image">
+        <img class=Trainee src="images/logo.png" alt="ICT solutions logo">
         <form action="index.html">
           <button class=button>Homepage</button>
         </form>
@@ -40,7 +42,7 @@
     <!-- The page div will handle the background colour of the main content, this will be consistent across all pages -->
     <div id="maincontent">
       <div class="video">
-        <video width="480" height="320" align="right" src="images/Profile.mp4" controls autoplay loop>
+        <video width="480" height="320" align="right" src="images/Profile.mp4" alt="Web development video" controls autoplay loop>
 
 
           Your browser does not support the video tag.>
