--- a/U6/trainee.html
+++ b/U6/trainee.html
@@ -3,8 +3,10 @@
 <html>
 
 <head>
-
-  <title>ICT Solutions</title>
+  <meta name="description" content="ICT solutions">
+  <meta name="keywords" content="HTML, CSS, JavaScript">
+  <meta name="author" content="Adam">
+  <title>Trainee</title>
 
   <link href="TFstyleSheet.css" rel="stylesheet" type="text/css">
 </head>
@@ -19,7 +21,7 @@
     <div id="navigation">
 
       <div class="button-container">
-        <img class=Trainee src="images/logo.png" alt="Think Future Banner Image">
+        <img class=Trainee src="images/logo.png" alt="ICT solutions logo">
         <form action="index.html">
           <button class=button>Homepage</button>
         </form>
