--- a/U6/web.html
+++ b/U6/web.html
@@ -3,8 +3,10 @@
 <html>
 
 <head>
-
-  <title>ICT Solutions</title>
+  <meta name="description" content="ICT solutions">
+  <meta name="keywords" content="HTML, CSS, JavaScript">
+  <meta name="author" content="Adam">
+  <title>Web Development</title>
   <link href="TFstyleSheet.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -18,7 +20,7 @@
     <div id="navigation">
 
       <div class="button-container">
-        <img class=Trainee src="images/logo.png" alt="Think Future Banner Image">
+        <img class=Trainee src="images/logo.png" alt="ICT solutions logo">
         <form action="index.html">
           <button class=button>Homepage</button>
         </form>
@@ -65,7 +67,7 @@
 
 
       <p <a href="https://www.codecademy.com/catalog/subject/web-development">
-        <img height=150px width=150px class=left src="images/web1.png">
+        <img height=150px width=150px class=left src="images/web1.png" alt="Code academy logo">
         </a>
         <br>
       <p>Web Development is the practice of developing websites and web apps that live on the internet. Whether you’re
@@ -79,7 +81,7 @@
       <br>
       <hr>
       <a href="https://www.udemy.com/courses/development/web-development/">
-        <img height=150px width=150px class=left src="images/web2.png">
+        <img height=150px width=150px class=left src="images/web2.png" alt="Udemy logo"">
       </a>
       <br>
       <p>Web Development is the practice of developing websites and web apps that live on the internet. Whether you’re
@@ -93,7 +95,7 @@
       <br>
       <hr>
       <a href="https://web.dev/learn">
-        <img height=150px width=150px class=left src="images/web3.png">
+        <img height=150px width=150px class=left src="images/web3.png" alt="Web.dev logo"">
       </a>
       <br>
       <p>Web Development is the practice of developing websites and web apps that live on the internet. Whether you’re
