--- a/U6/index.html
+++ b/U6/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-  <meta name="description" content="ICT solutions">
+  <meta name="description" content="ICT solutions profile page introduces the company and explains what they do.">
   <meta name="keywords" content="HTML, CSS, JavaScript">
   <meta name="author" content="Adam">
   
