--- a/U6/job.html
+++ b/U6/job.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-  <meta name="description" content="ICT solutions">
+  <meta name="description" content="ICT solutions Job qualification and job specification page gives a explanation of what they are looking for and are expecting employees to do.">
   <meta name="keywords" content="HTML, CSS, JavaScript">
   <meta name="author" content="Adam">
   <title>Job Spec</title>
