--- a/U6/trainee.html
+++ b/U6/trainee.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-  <meta name="description" content="ICT solutions">
+  <meta name="description" content="ICT solutions trainees page contains all current trainees and their fields.">
   <meta name="keywords" content="HTML, CSS, JavaScript">
   <meta name="author" content="Adam">
   <title>Trainee</title>
