--- a/U6/web.html
+++ b/U6/web.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-  <meta name="description" content="ICT solutions">
+  <meta name="description" content="ICT solutions web page contains a description and a link to different web development courses">
   <meta name="keywords" content="HTML, CSS, JavaScript">
   <meta name="author" content="Adam">
   <title>Web Development</title>
